# sport_house_new

./: .gitignore  LICENSE  README.md
backend/: README.md  local.yml  locustfile.py  production.yml  pyproject.toml
backend/apps/ai/: admin.py  apps.py  models.py  tasks.py  utils.py
backend/apps/ai/migrations/: 0001_initial.py
backend/apps/base/: admin.py  apps.py  models.py  permissions.py
backend/apps/base/api/: api_router.py  serializers.py  utils.py  views.py
backend/apps/base/migrations/: 0001_initial.py  0002_sporttype.py  0003_physicaltraining.py  0004_sporttypeсontraindication.py  0005_sporttype_description_and_more.py  0006_notificationtype.py  0007_status.py  0008_breakfasteattype_dinnereattype_luncheattype.py  0009_locationcategory_locationsporttype.py  0010_locationcoating_locationlight_and_more.py  0011_eventlocationtype.py
backend/apps/location/: admin.py  apps.py  models.py
backend/apps/location/api/: api_router.py  filters.py  serializers.py  views.py
backend/apps/location/migrations/: 0001_initial.py  0002_locationcategory_description.py  0003_remove_locationcategory_slug.py  0004_locationsporttype_location_sports.py  0005_locationsporttype_icon.py  0006_location_image.py  0007_alter_locationcategory_options_and_more.py  0008_remove_location_direction_remove_location_image_and_more.py  (+19 more)
backend/apps/recomendation/: admin.py  apps.py
backend/apps/user/: admin.py  models.py  tasks.py  tests.py
backend/config/: api_router.py  celery_app.py
backend/config/settings/: base.py  local.py  production.py
backend/nginx/: Dockerfile  nginx.conf
(+263 files in other folders)
